syntax = "proto3";

option csharp_namespace = "ProjectX.Protobuf.Protos.Models";
import "Protos/Models/Chunk.proto";

enum UploadStatusCode {
  Unknown = 0;
  Ok = 1;
  Failed = 2;
}

message FileMetadata {
  string Name = 1;
  string Type = 2;
}

message UploadFileRequest {
   oneof request {
     FileMetadata Metadata = 1;
     Chunk Chunk = 2;
   }
}

message UploadFileResponse {
  string Message = 1;
  UploadStatusCode Code = 2;
}